[IV] Removed legacy controller, added cross org for local, sonar improvements
